--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@
     height: 500px;
 }
 .button{
-    background-color: #1F2937;
+    background-color: #525252;
     border: 1px;
     border-radius: 4px;
     margin: 2px;
