made calculator look good

--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,68 @@
+body{
+    text-align: center;
+    margin-top: 5em;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: gray;
+}
 .Calculator-container{
     display:flex;
     flex-direction: column;
     gap: 20px;
     justify-content: center;
     align-items: center;
+    background-color: rgb(78, 78, 78);
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 15px;
+    padding: 20px;
 }
 .result-container{
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 15px;
     padding:20px;
     border: 5px;
-    text-align:right;
-    background-color: rgb(65, 65, 65);
-    width: 500px;
+    background-color: rgb(51, 51, 51);
+    width: 400px;
+    height: 75px;
     display:flex;
     flex-direction: column;
     align-items: flex-end;
     justify-content:flex-start;
+    font-size: 32px;
 }
-[data-operator]{
-    background-color: rgb(206, 36, 36);
+.button[data-operator]{
+    background-color: rgb(7, 135, 139);
 }
-[data-number]{
+.button, [data-number]{
     background-color: rgb(63, 63, 63);
 }
 .button-container{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    width: 500px;
-    height: 500px;
+    width: 450px;
+    height: 450px;
 }
 .button{
-    border: 1px;
-    border-radius: 4px;
+    border: 2px solid rgb(155, 153, 153);
+    border-radius: 15px;
     margin: 2px;
     display:flex;
     justify-content: center;
     align-items: center;
-    font-size: 16px;
+    font-size: 32px;
+    font-weight: bold;
 }
+.button:active {
+    background-color: rgb(139, 139, 139);
+
+}
+.button:hover {
+    background-color: rgb(112, 112, 112);
+    transform: scale(1.05);
+  }
 .footer {
     position: absolute;
     bottom: 0;
