--- a/styles.css
+++ b/styles.css
@@ -73,5 +73,17 @@ body{
     gap: 10px;
     width: 100%;
     padding: 10px;
+    color: black;
     font-size: 20px;
+    background-color: #b6b6b6;
 }
+.fa-github {
+    color: var(--font);
+    font-size: 24px;
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .fa-github:hover {
+    transform: rotate(360deg) scale(1.2);
+  }
+  
